--- a/vue-calculator/package.json
+++ b/vue-calculator/package.json
@@ -10,6 +10,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "sass": "^1.17.2",
     "vue": "^2.4.2"
   },
   "devDependencies": {
